# Naviam-License

./: .agent.md  .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md
Project-source/forge-server/: .env.example  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  README.md  alembic.ini  main.py  pyproject.toml
Project-source/forge-server/app/: main.py
Project-source/forge-server/app/adapters/cache/: __init__.py
Project-source/forge-server/app/adapters/cache/interface/: __init__.py  protocol.py
Project-source/forge-server/app/adapters/cache/redis/: __init__.py  adapter.py
Project-source/forge-server/app/adapters/database/: __init__.py  _sqlalchemy_base.py
Project-source/forge-server/app/adapters/database/interface/: __init__.py  protocol.py
Project-source/forge-server/app/adapters/object_storage/: __init__.py
Project-source/forge-server/app/api/v1/: __init__.py
Project-source/forge-server/app/cli/: __init__.py
Project-source/forge-server/app/cli/bootstrap_admin/: __init__.py  __main__.py  run.py
Project-source/forge-server/app/cli/seed_demo/: __init__.py  __main__.py  run.py
Project-source/forge-server/app/core/audit/: __init__.py  recorder.py
Project-source/forge-server/app/core/auth/: __init__.py  api_key_quota.py  passwords.py  rate_limit.py  sessions.py
Project-source/forge-server/app/core/key_storage/: __init__.py  encryption.py  interface.py  rotation.py
Project-source/forge-server/app/core/license/: __init__.py  payload.py
Project-source/forge-server/app/core/signing/: __init__.py  interface.py
Project-source/forge-server/app/core/webhooks/: __init__.py  emitter.py
Project-source/forge-server/app/middleware/: admin_session.py  api_key_auth.py  default_password_lockout.py  dual_auth.py  mtls_gate.py  request_logging.py
Project-source/forge-server/app/models/: __init__.py  api_key.py  audit.py  base.py  customer.py  heartbeat.py  license.py  product.py  revocation.py  signing_key.py  user.py
Project-source/forge-server/app/observability/: __init__.py  metrics.py  startup_checks.py
Project-source/forge-server/app/repositories/: __init__.py  api_keys.py  audit.py  customers.py  heartbeat.py  heartbeat_query.py  licenses.py  products.py  revocation.py  signing_keys.py  users.py
Project-source/forge-server/app/settings/: __init__.py  settings.py
Project-source/forge-server/app/state/: __init__.py  container.py
Project-source/forge-server/app/workers/: __init__.py  app.py
Project-source/forge-server/app/workers/scheduler/: __init__.py  schedule.py
Project-source/forge-server/app/workers/tasks/: __init__.py  _runner.py  audit_retention.py  heartbeat_archive.py  license_auto_renew.py  license_expiry_scan.py
Project-source/forge-server/migrations/: env.py
Project-source/forge-server/migrations/versions/: 000001_user_create_table.py  000002_customer_create_table.py  000003_product_create_table.py  000004_license_create_table.py  000005_signing_key_create_table.py  000006_api_key_create_table.py  000007_revocation_list_create_table.py  000008_heartbeat_log_create_table.py  000009_audit_log_create_table.py  000010_api_key_add_expires_at.py
Project-source/forge-server/tests/integration/: test_admin_auth.py  test_admin_users.py  test_alembic_migrations.py  test_all_algorithms.py  test_api_key_management.py  test_audit_log.py  test_bootstrap_admin.py  test_change_password.py  test_crl.py  test_crl_caching.py  test_crl_multi_algorithm.py  test_customer_product_crud.py  test_database_adapters.py  test_db_heartbeat.py  test_e2e_all_algorithms.py  test_e2e_multi_algorithm_http.py  test_e2e_verifier_to_server.py  test_heartbeat.py  test_heartbeat_monitor.py  test_http_api.py  test_http_with_db.py  test_issuer_with_storage.py  test_key_management.py  test_key_storage_local_file.py  test_license_lifecycle.py  test_license_revoke.py  test_login_rate_limit.py  test_object_storage_local_s3.py  test_object_storage_providers.py  test_persistence.py  test_redis_adapter.py  test_sign_and_pack.py
Project-source/forge-verifier/python/: README.md  pyproject.toml
Project-source/forge-verifier/python/forge_verifier/: __init__.py  exceptions.py  fingerprint.py  types.py  verifier.py
Project-source/forge-verifier/python/forge_verifier/algorithms/: __init__.py
Project-source/forge-verifier/python/forge_verifier/binding/: __init__.py  policy.py
Project-source/forge-verifier/python/forge_verifier/crl/: __init__.py  fetcher.py  parsing.py  verifier.py
Project-source/forge-verifier/python/forge_verifier/heartbeat/: __init__.py  client.py
Project-source/forge-verifier/python/forge_verifier/parsing/: __init__.py  forge_file.py  payload.py
Project-source/forge-verifier/python/tests/: test_algorithms_rsa_sm2.py  test_binding.py  test_crl.py  test_crl_fetcher.py  test_heartbeat_client.py  test_interop_vectors.py  test_verify_blocking.py
Project-source/forge-verifier/rust/: Cargo.toml  README.md
Project-source/forge-verifier/rust/src/: binding.rs  crl.rs  heartbeat.rs  lib.rs  online.rs  sm2.rs
Project-source/forge-verifier/rust/tests/: vectors.rs
apps/api/: Dockerfile  README.md  manage.py  pyproject.toml
apps/api/config/: asgi.py  urls.py  wsgi.py
apps/api/config/fixtures/: initial.json
apps/api/config/settings/: base.py  dev.py  prod.py
apps/api/requirements/: base.txt  dev.in  dev.txt  prod.in  prod.txt
sdk/: README.md  pyproject.toml
sdk/src/license_sdk/: __init__.py  client.py  cloud_id.py  crypto.py  errors.py  hardware.py  keystore.py  loader.py  online.py  validator.py
sdk/tests/: __init__.py  test_loader.py  test_validator.py
(+596 files in other folders)
