[project]
name = "license-sdk"
version = "0.1.0"
description = "Python SDK for verifying License files issued by the License Console (Vendor)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "License Console", email = "ops@workerspace.ai" }]
dependencies = [
    "cryptography>=42.0.0",
    "cbor2>=5.6.0",
]

[project.optional-dependencies]
online = ["httpx>=0.27.0"]
dev = [
    "pytest>=8.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/license_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
