[build-system]
# Modern PEP 517 build backend so `pip install -e .` resolves `app/` cleanly
# (no PYTHONPATH=. shim needed).
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-server"
version = "0.1.0"
description = "Forge License Authority — server (API + signing + verification + heartbeat + audit)"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "gennacalluan", email = "gennacalluan@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",          # postgres driver
  "aiomysql>=0.2",          # mysql driver
  "oracledb>=2.0",          # oracle driver (tidb 用 mysql driver)
  "redis>=5.0",
  "celery>=5.3",
  "structlog>=24.1",
  "httpx>=0.26",
  "cryptography>=42.0",     # ed25519 / rsa
  "gmssl>=3.2",             # SM2 (待评估替换)
  "boto3>=1.34",            # s3
  "azure-storage-blob>=12.19",
  "oss2>=2.18",             # aliyun-oss
  "google-cloud-storage>=2.14",
  "cos-python-sdk-v5>=1.9", # tencent-cos
  "tos>=2.6",               # volcengine-tos
  "esdk-obs-python>=3.23",  # huawei-obs
  "minio>=7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.2",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "migrations*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
