[package]
name = "forge-verifier"
version = "0.1.0"
edition = "2021"
description = "Forge License Authority Verifier — Rust SDK"
license = "Proprietary"

[lib]
name = "forge_verifier"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4"
ed25519-dalek = "2.1"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
signature = "2"
thiserror = "1.0"

# Online + binding helpers — blocking HTTP keeps this dep-light; no async runtime required.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
hmac = "0.12"
hex = "0.4"
rand = "0.8"
mac_address = "1"
hostname = "0.4"
num_cpus = "1"

# SM2 (国密) — libsm is pure-Rust; the rust-crypto stack does not ship SM2.
libsm = "0.6"

[dev-dependencies]
base64 = "0.22"
